# SynthesisDigitalSystems_Lab

./: .gitignore  LICENSE  README.md
Design_Analysis/lab1/dct_prj/: .vivado_hls_log_all.xml
Design_Analysis/lab1/dct_prj/solution1/: solution1.aps
Design_Analysis/lab1/dct_prj/solution1/.autopilot/: .automg_exit  (+1 more)
Design_Analysis/lab1/dct_prj/solution2/: script.tcl
Design_Analysis/lab1/dct_prj/solution3/: solution3.aps  solution3_data.json
Design_Analysis/lab1/dct_prj/solution4/: script.tcl  solution4.directive  solution4_data.json
Design_Analysis/lab1/dct_prj/solution5/: directives.tcl  script.tcl  solution5.directive  solution5_data.json
Design_Analysis/lab1/dct_prj/solution6/: solution6.directive
Introduction/lab1/fir-prj/: .project
Introduction/lab1/fir-prj/solution1/: script.tcl  solution1.aps
lab1_helloworld/: patch_workingdirectory.sh
lab1_helloworld/edaduino/: .gitignore  README.md  environment.sh
lab1_helloworld/edaduino/sdk-settings/: indexer-settings.xml
lab1_helloworld/edaduino/sw/: CMakeLists.txt  main.c
lab1_helloworld/edaduino/sw/cmake/: EdaDuinoTarget.cmake
lab1_helloworld/edaduino/vp/: CMakeLists.txt
lab1_helloworld/edaduino/vp/cmake/: FindVERILATOR.cmake
lab1_helloworld/edaduino/vp/include/: edaduino_vp.h
lab1_helloworld/edaduino/vp/include/aes_ha/: aes_ha_regs.h
lab1_helloworld/edaduino/vp/ini/: base.ini  remote.ini
lab1_helloworld/edaduino/vp/src/: edaduino_vp.cpp
lab1_helloworld/edaduino/vp/src/aes_ha/: aes_ha.cpp
lab1_helloworld/edaduino/vp/src/utils/: config.cpp
lab3_aes_hls/: .gitignore  README.md
lab3_aes_hls/aes_hls_prj/: .project  .vivado_hls_log_all.xml
lab3_aes_hls/aes_hls_prj/.apc/: autopilot.apfmapping
lab3_aes_hls/aes_hls_prj/Debug/: makefile
lab3_aes_hls/aes_hls_prj/sol1/: script.tcl  sol1.aps  sol1_data.json
lab3_aes_hls/aes_hls_prj/sol1/.debug/: aes16_bidir.protoinst
lab3_aes_hls/aes_hls_prj/sol2/: script.tcl  sol2.aps  sol2_data.json
lab3_aes_hls/aes_hls_prj/sol2/.autopilot/: .automg_exit  .autopilot_exit
lab3_aes_hls/aes_hls_prj/sol2/.debug/: aes16_bidir.protoinst
lab3_aes_hls/aes_hls_prj/sol3/: sol3.directive  sol3_data.json
lab3_aes_hls/aes_hls_prj/sol3/.autopilot/: .autopilot_exit
lab3_aes_hls/c_src/: aes.c
lab3_aes_hls/hls/: top_aes.h
lab3_aes_hls/scripts/: patch_romreaders.py
lab3_aes_hw/edaduino/: .gitignore  environment.sh
lab3_aes_hw/edaduino/sw/: main.c
lab3_aes_hw/edaduino/vp/: run_vp_tgb.sh
lab3_aes_hw/edaduino/vp/ini/: remote.ini
lab3_aes_hw/edaduino/vp/src/: riscv_cpu.cpp
lab3_aes_sw/edaduino/sw/: .project  README.md  main.c
lab3_aes_sw/edaduino/sw/app/: aes.h
lab3_aes_sw/edaduino/vp/: CMakeLists.txt
lab3_aes_sw/edaduino/vp/cmake/: FindAESVRTL.cmake  FindMinresSCC.cmake  FindSystemC.cmake
lab3_aes_sw/edaduino/vp/ini/: remote.ini
lab3_aes_sw/edaduino/vp/src/: edaduino_soc.cpp
submissions/M3/lab3_aes_hls/: Makefile  environment.sh
submissions/M3/lab3_aes_hls/aes_hls_prj/: .project  .vivado_hls_log_all.xml
submissions/M3/lab3_aes_hls/c_src/: .aes.cpp  aes.h
submissions/M3/lab3_aes_hls/hls/: top_aes.c
submissions/M3/lab3_aes_hls/testbench/: aes_test.c
submissions/M3/lab3_aes_hw/edaduino/sw/: CMakeLists.txt  main.c
submissions/M3/lab3_aes_hw/edaduino/sw/bsp/inc/: bsp.h
submissions/M3/lab3_aes_hw/edaduino/sw/bsp/src/: exception.c  uart_drv.c
submissions/M3/lab3_aes_hw/edaduino/sw/cmake/: EdaDuinoTarget.cmake
submissions/M3/lab3_aes_hw/edaduino/sw/cmake/doc/: doxyfile.in
submissions/M3/lab3_aes_hw/edaduino/sw/cmake/edaduino/sw/libs/sys_lib/inc/: edaduino.h
submissions/M3/lab3_aes_sw/edaduino/: environment.sh
(+1424 files in other folders)
